# Youtube-Transcript-to-Database

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml  requirements.txt
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: JobCard.tsx  JobForm.tsx  StatsBar.tsx  ToastContainer.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useToast.ts
src/ytdb/: __init__.py  __main__.py  cli.py  config.py  sync.py
src/ytdb/api/: routes.py  schemas.py
src/ytdb/db/: __init__.py  engine.py  job_repository.py  migrations.py  models.py  repository.py
src/ytdb/jobs/: runner.py
src/ytdb/youtube/: __init__.py  channel.py  transcripts.py
tests/: test_api.py  test_cli.py  test_delete_job.py  test_engine.py  test_live_streams.py  test_ytdb.py
